--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
   "private": true,
   "main": "./build/index.js",
   "scripts": {
-    "start": "tsc --watch",
-    "build": "tsc",
+    "start": "tsc-watch --skipLibCheck --onSuccess 'node dist/index.js'",
+    "build": "tsc --skipLibCheck",
+    "deploy": "npm run build && node dist/index.js",
     "format": "prettier --loglevel warn --write \"**/*.{ts,tsx,css,md}\"",
     "lint": "eslint . --cache --fix --ext .ts"
   },
   "devDependencies": {
+    "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "module-alias": "^2.2.3",
     "prettier": "^2.8.8",
+    "tsc-watch": "^6.0.4",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
